--- a/_posts/2024-02-11-coveo-blitz-2024.md
+++ b/_posts/2024-02-11-coveo-blitz-2024.md
@@ -48,7 +48,7 @@ Pour ce qui est de la défense, le vaisseau a un bouclier qui se régénère aut
 
 ## Premières itérations... Et premiers bogues
 
-Lorsqu'on pense stratégie dans ce type de jeu, la balance entre l'attaque et la défense entre rapidement en ligne de compte. SG1, par exemple, m'ont dit avoir de manière générale avoir favorisé une stratégie plus défensive, soit de manier le bouclier, de détruire les astéroïdes et autres débris, etc. Ils m'ont d'ailleurs rappelé le [principe de l'ours](https://medium.com/the-ascent/you-dont-have-to-outrun-the-bear-cdb52e9613f7) :
+Lorsqu'on pense stratégie dans ce type de jeu, la balance entre l'attaque et la défense entre rapidement en ligne de compte. SG1, par exemple, m'ont dit de manière générale avoir favorisé une stratégie plus défensive, soit de manier le bouclier, de détruire les astéroïdes et autres débris, etc. Ils m'ont d'ailleurs rappelé le [principe de l'ours](https://medium.com/the-ascent/you-dont-have-to-outrun-the-bear-cdb52e9613f7) :
 
 > Pas besoin de courir plus vite que l'ours pour s'enfuir. Il suffit de courir plus vite que l'autre à côté de toi.
 
@@ -72,7 +72,7 @@ L'espace est un milieu hostile, et je ne l'ai que trop bien réalisé à Blitz 
 
 Une autre idée que j'ai implémentée est de charger au maximum avant de tirer. Or, c'était difficile d'évaluer à quel point c'était avantageux ou pas dans certaines situations. J'ai donc fait une petite expérience : en local, j'ai opposé le _bot_ avec seulement ce changement contre le _bot_ de ma version précédente. Il s'est avéré que la nouvelle version gagnait constamment contre la précédente. J'ai dès lors adopté le changement et pu constater que je continuais de monter dans le classement. À partir de ce moment, j'ai souvent opposé mon propre _bot_ à sa version antérieure pour valider mes itérations.
 
-Il y a plusieurs possibilités à Blitz, et c'est parfois difficile de bien balancer et d'implémenter certaines stratégies. Lorsque j'ai parlé à SG1 de l'idée de charger les tourelles, ils m'ont mentionné avoir complètement écarté cette idée, car lorsqu'ils l'ont essayée, ils ont observé qu'ils étaient moins performants. Comme quoi, il y a plusieurs subtilités qui font qu'un élément de stratégie peut bien marcher pour une équipe et pas une autre : de là l'importance de s'autoévaluer constamment, puis de faire des choix et de savoir prioriser en conséquence.
+Il y a plusieurs possibilités à Blitz, et c'est parfois difficile de bien balancer et d'implémenter certaines stratégies. Lorsque j'ai parlé à SG1 de l'idée de charger les tourelles, ils m'ont mentionné avoir complètement écarté cette idée, car lorsqu'ils l'ont essayée, ils ont observé qu'ils étaient moins performants. Comme quoi, il y a plusieurs subtilités qui font qu'un élément de stratégie peut bien marcher pour une équipe et pas pour une autre : de là l'importance de s'autoévaluer constamment, puis de faire des choix et de savoir prioriser en conséquence.
 
 ## Un Blitz d'itérations
 
@@ -89,7 +89,7 @@ Les membres de l'équipe Leebly ont beaucoup renchéri sur la valeur de travaill
   <figcaption>Lors de la finale, Leebly, malgré une tourelle qui tire dans le vide, gruge petit à petit les points de vie de son adversaire, Les_Avaturiers, et sortira vainqueur de cette manche </figcaption>
 </figure>
 
-Selon mon expérience, plus les itérations sont simples et courtes, plus les bogues sont faciles à trouver, et plus on peut avoir une rétroaction rapide. Un autre exemple de simplicité mentionné par Leebly est leur choix de stratégie défensive de dernier recours. Ils m'ont expliqué que lorsque leur niveau de vie était très bas, ils envoyaient tous les membres d'équipage manier une station de bouclier, leur raisonnement étant qu'en étant en situation critique, les débris de l'espace auraient raison d'eux, mais peut-être aussi de leurs adversaires. Le seuil utilisé pour déterminer le déclencheur de cette solution d'urgence lui a toutefois été déterminé avec beaucoup d'essais-erreurs, c'est-à-dire en changeant la valeur, en regardant quelques matchs, et en réajustant au besoin. Bref, il n'y a pas de trop petites ou trop simples itérations à Blitz!
+Selon mon expérience, plus les itérations sont simples et courtes, plus les bogues sont faciles à trouver, et plus on peut avoir une rétroaction rapide. Un autre exemple de simplicité mentionné par Leebly est leur choix de stratégie défensive de dernier recours. Ils m'ont expliqué que lorsque leur niveau de vie était très bas, ils envoyaient tous les membres d'équipage manier une station de bouclier, leur raisonnement étant qu'en situation critique, les débris de l'espace auraient raison d'eux, mais peut-être aussi de leurs adversaires. Le seuil utilisé pour déterminer le déclencheur de cette solution d'urgence lui a toutefois été déterminé avec beaucoup d'essais-erreurs, c'est-à-dire en changeant la valeur, en regardant quelques matchs, et en réajustant au besoin. Bref, il n'y a pas de trop petites ou trop simples itérations à Blitz!
 
 Même si les stratégies de SG1 et de moi-même différaient en plusieurs points, nous avons, nous aussi, procédé par itération plus ou moins importante. Lors des phases de bêta-test, je soumettais fréquemment mes changements au serveur afin de me mesurer aux autres équipes, dont SG1 en particulier, qui menait le classement constamment. Ils m'ont dit qu'ils en faisaient de même pour valider et développer leurs stratégies. Ce sont dans les deux cas les nombreuses et répétées confrontations entre nous qui nous ont mutuellement aidées à avancer efficacement. En réalité, je ne pense pas pouvoir prétendre avoir résolu la clé d’une grande stratégie pour cette édition de Blitz : j’ai l’impression que c’est plutôt l’attention à de nombreux petits éléments au fil du temps qui a été fructueuse.
 
